--- a/app/src/main/res/layout/activity_full_profile.xml
+++ b/app/src/main/res/layout/activity_full_profile.xml
@@ -19,10 +19,18 @@
             android:background="#ff101bff"
             android:src="@drawable/ic_launcher" />
 
+        <TextView
+            android:paddingTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="John Doe"
+            android:textSize="24dp"/>
+
         <ListView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/listView" />
+            android:id="@+id/profileList" />
 
     </LinearLayout>
 
