--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,12 +23,28 @@
             android:background="@color/black_overlay" android:orientation="horizontal"
             tools:ignore="UselessParent">
 
-            <Button android:id="@+id/dummy_button" style="?metaButtonBarButtonStyle"
+            <Button android:id="@+id/login_li" style="?metaButtonBarButtonStyle"
                 android:layout_width="0dp" android:layout_height="wrap_content"
                 android:layout_weight="1" android:text="@string/login_button"
                 android:onClick="linkedInAuthenticateClickHandler" />
 
         </LinearLayout>
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Logout"
+            android:id="@+id/clearSession"
+            android:layout_gravity="left|center_vertical" />
+
     </FrameLayout>
+
+    <EditText
+        android:layout_width="166dp"
+        android:layout_height="106dp"
+        android:id="@+id/at"
+        android:layout_gravity="center_horizontal"
+        android:clickable="false" />
 
 </FrameLayout>
