--- a/app/src/main/res/layout/activity_debug_directory.xml
+++ b/app/src/main/res/layout/activity_debug_directory.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.user.foodforthought.DebugDirectoryActivity">
+    tools:context="com.example.user.foodforthought.DebugDirectoryActivity"
+    android:background="#ff00baff">
 
     <Button
         android:layout_width="wrap_content"
@@ -32,9 +33,47 @@
         android:layout_height="wrap_content"
         android:text="Chat"
         android:id="@+id/button5"
-        android:layout_marginBottom="169dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/button3"
         android:onClick="goToChatOnClickListener"
-        android:nestedScrollingEnabled="false" />
+        android:nestedScrollingEnabled="false"
+        android:layout_below="@+id/button4"
+        android:layout_toEndOf="@+id/button3"
+        android:layout_marginTop="43dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Checklist:\n 1. Fill fields in parse user account with LinkedIn data. Company name, job title, description, picture, etc"
+        android:id="@+id/textView"
+        android:layout_below="@+id/button5"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="55dp"
+        android:layout_alignParentEnd="true"
+        android:textSize="15dp"
+        android:visibility="visible"
+        android:background="#fffeff0f" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="2. Get stack of profiles showing up. Allow users to press &quot;Yes&quot; to store selection on database. Two mutual &quot;yes&quot;&apos;s should be recognized and added to a list of matches in each profile."
+        android:id="@+id/textView2"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentStart="true"
+        android:textSize="15dp"
+        android:visibility="visible"
+        android:background="#fffeff0f" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="3. Chat functionality. List of matches on slide out drawer on right hand side of main page that shows the stack of profiles. Should allow messages to be stored and timestamped and displayed when a user opens each chat box with another user. Also, should allow for sending of messages in real time."
+        android:id="@+id/textView3"
+        android:layout_below="@+id/textView2"
+        android:layout_alignParentStart="true"
+        android:textSize="15dp"
+        android:visibility="visible"
+        android:background="#fffeff0f" />
 </RelativeLayout>
