--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,7 +44,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|top"
-            android:text="access token value" />
+            android:text="access token value"
+            android:textColor="#ffffffff"
+            android:textStyle="bold" />
 
 
     </FrameLayout>
