Log in with parse in background in LoginActivity.

--- a/app/src/main/res/layout/activity_chat_application.xml
+++ b/app/src/main/res/layout/activity_chat_application.xml
@@ -13,6 +13,12 @@
         android:layout_height="fill_parent"
         android:baselineAligned="false">
 
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:id="@+id/chat_dialogue"></LinearLayout>
+
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="fill_parent"
@@ -35,5 +41,6 @@
                 android:layout_gravity="bottom" />
 
         </LinearLayout>
+
     </LinearLayout>
 </ScrollView>
