--- a/app/src/main/res/layout/activity_chat_application.xml
+++ b/app/src/main/res/layout/activity_chat_application.xml
@@ -1,46 +1,58 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.user.foodforthought.ChatApplicationActivity">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
 
+    <ListView
+        android:id="@+id/listMessages"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:transcriptMode="alwaysScroll"
+        android:layout_above="@+id/divider"
+        tools:listitem="@layout/message_left"
+        android:padding="0dip"
+        android:divider="@null"
+        android:dividerHeight="0dp" android:stackFromBottom="true"
+    />
 
-    <LinearLayout
-        android:orientation="vertical"
+    <RelativeLayout
+        android:id="@+id/divider"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:baselineAligned="false">
+        android:layout_above="@+id/relSendMessage"
+        android:layout_height="1dip"
+    />
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:id="@+id/chat_dialogue"></LinearLayout>
+    <RelativeLayout
+        android:id="@+id/relSendMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:background="@android:color/white"
+        android:paddingLeft="10dp"
+        android:layout_alignParentBottom="true">
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:baselineAligned="false"
-            android:measureWithLargestChild="false">
 
-            <EditText android:id="@+id/edit_message"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:hint="@string/chat_text_field_hint"
-                android:layout_weight="1"
-                android:layout_gravity="bottom" />
+        <EditText
+            android:layout_marginBottom="-4dp"
+            android:id="@+id/messageText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="@string/chat_text_field_hint"
+            android:textSize="14sp"
+            android:layout_marginRight="10dp"
+            android:layout_alignTop="@+id/sendButton"
+            android:layout_alignBottom="@+id/sendButton"
+            android:layout_toLeftOf="@+id/sendButton"/>
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:text="@string/chat_button_send"
-                android:layout_gravity="bottom" />
+        <Button
+            android:layout_width="72dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_margin="4dp"
+            android:text="@string/chat_button_send"
+            android:onClick="sendButtonClickHandler"
+            android:id="@+id/sendButton" />
+    </RelativeLayout>
 
-        </LinearLayout>
 
-    </LinearLayout>
-</ScrollView>
+</RelativeLayout>
