--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,22 +19,24 @@
         android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true">
 
             <ImageView
                 android:layout_width="204dp"
-                android:layout_height="148dp"
+                android:layout_height="175dp"
                 android:id="@+id/imageView"
                 android:layout_gravity="center_horizontal|top"
-                android:background="#ff101bff"
-                android:src="@drawable/ic_launcher"
+                android:src="@drawable/sample_picture"
                 android:layout_row="0"
                 android:layout_column="1"
                 android:layout_above="@+id/button"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="30dp"
-                android:onClick="clickMainProfileHandler" />
+                android:onClick="clickMainProfileHandler"
+                android:background="#ff0000ff" />
 
             <Button
                 android:layout_width="wrap_content"
@@ -56,17 +58,17 @@
                 android:layout_alignRight="@+id/imageView"
                 android:layout_alignEnd="@+id/imageView" />
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Matches"
-                android:id="@+id/button6"
-                android:layout_below="@+id/button"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="64dp"
-                android:onClick="matchesButtonClickHandker" />
-
         </RelativeLayout>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Matches"
+            android:id="@+id/button6"
+            android:onClick="matchesButtonClickHandker"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="133dp" />
 
     </RelativeLayout>
 </LinearLayout>
