Implemented basic chat functionality. Can message between two users and display the messages sequentially.

--- a/app/src/main/res/layout/activity_chat_application.xml
+++ b/app/src/main/res/layout/activity_chat_application.xml
@@ -18,12 +18,12 @@
         >
 
         <ListView
-            android:id="@+id/listMessages"
+            android:id="@+id/messageList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:transcriptMode="alwaysScroll"
             android:layout_above="@+id/divider"
-            tools:listitem="@layout/message_left"
+            tools:listitem="@layout/simple_text"
             android:padding="0dip"
             android:divider="@null"
             android:dividerHeight="0dp" android:stackFromBottom="true"
