--- a/app/src/main/res/layout/simple_text_right.xml
+++ b/app/src/main/res/layout/simple_text_right.xml
@@ -43,7 +43,7 @@
             >
 
             <TextView
-                android:id="@+id/txtMessage"
+                android:id="@+id/textMessage"
                 android:paddingRight="12dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
