--- a/app/src/main/res/layout/activity_full_profile.xml
+++ b/app/src/main/res/layout/activity_full_profile.xml
@@ -26,7 +26,7 @@
 
             <ImageView
                 android:layout_width="200dp"
-                android:layout_height="175dp"
+                android:layout_height="wrap_content"
                 android:id="@+id/imageView"
                 android:layout_gravity="center_horizontal"
                 android:src="@drawable/sample_picture"
