Matching and list of matches DONE. Have to still add link between matches list and chat room.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,8 @@
                 android:layout_gravity="left|center_vertical"
                 android:layout_alignTop="@+id/button"
                 android:layout_alignRight="@+id/imageView"
-                android:layout_alignEnd="@+id/imageView" />
+                android:layout_alignEnd="@+id/imageView"
+                android:onClick="yesMatchClickHandler" />
 
         </RelativeLayout>
 
