--- a/app/src/main/res/layout/activity_matches_list.xml
+++ b/app/src/main/res/layout/activity_matches_list.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp"
-        android:id="@+id/usersListView">
+        android:id="@+id/matchesList">
     </ListView>
 
 </LinearLayout>
