Updated debug directory TODO list

--- a/app/src/main/res/layout/activity_debug_directory.xml
+++ b/app/src/main/res/layout/activity_debug_directory.xml
@@ -58,7 +58,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="2. STACK:\n - Get navigation drawer layout working which will be able to display list of matches that link to chat page\n - Get stack of profiles showing up. Allow users to press &quot;Yes&quot; to store selection on database. Two mutual &quot;yes&quot;&apos;s should be recognized and added to a list of matches in each profile."
+        android:text="2. STACK:\n  - Get stack of profiles showing up. Use GPS data and other data to create stack (This is pretty easy in Parse). Have new profile come up after &quot;Yes&quot; or &quot;No&quot;. Tracking likes and finding mutual likes has already been done."
         android:id="@+id/textView2"
         android:layout_below="@+id/textView"
         android:layout_alignParentStart="true"
@@ -71,7 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="3. CHAT:\n - Chat functionality. List of matches on slide out drawer on right hand side of main page that shows the stack of profiles. Should allow messages to be stored and timestamped and displayed when a user opens each chat box with another user. Also, should allow for sending of messages in real time."
+        android:text="3. CHAT:\n -  Chat is DONE. Need to link list of matches to chatrooms between two users. Currently does not link."
         android:id="@+id/textView3"
         android:layout_below="@+id/textView2"
         android:layout_alignParentStart="true"
