--- a/app/src/main/res/layout/activity_matches_list.xml
+++ b/app/src/main/res/layout/activity_matches_list.xml
@@ -15,7 +15,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp"
-        android:id="@+id/matchesList">
+        android:id="@+id/matchesList"
+        android:footerDividersEnabled="false"
+        android:headerDividersEnabled="false"
+        android:scrollingCache="false"
+        android:smoothScrollbar="false"
+        android:stackFromBottom="false"
+        android:transitionGroup="false">
     </ListView>
 
 </LinearLayout>
