--- a/app/src/main/res/layout/activity_debug_directory.xml
+++ b/app/src/main/res/layout/activity_debug_directory.xml
@@ -31,7 +31,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Chat"
+        android:text="Matches"
         android:id="@+id/button5"
         android:onClick="goToChatOnClickListener"
         android:nestedScrollingEnabled="false"
