--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
                 android:layout_height="175dp"
                 android:id="@+id/imageView"
                 android:layout_gravity="center_horizontal|top"
-                android:src="@drawable/sample_picture"
+                android:src="@drawable/test"
                 android:layout_row="0"
                 android:layout_column="1"
                 android:layout_above="@+id/button"
@@ -46,7 +46,8 @@
                 android:layout_centerVertical="true"
                 android:layout_alignLeft="@+id/imageView"
                 android:layout_alignStart="@+id/imageView"
-                android:layout_gravity="left|center_vertical" />
+                android:layout_gravity="left|center_vertical"
+                android:onClick="noMatchClickHandler"/>
 
             <Button
                 android:layout_width="wrap_content"
@@ -61,12 +62,22 @@
 
         </RelativeLayout>
 
+        <TextView
+            android:id="@+id/nomatches"
+            android:paddingTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="24dp"
+            android:text="No more users to be found!"
+            android:visibility="gone"/>
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Matches"
             android:id="@+id/button6"
-            android:onClick="matchesButtonClickHandker"
+            android:onClick="matchesButtonClickHandler"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="133dp" />
