Added name to MainActivity, fixed some bugs in MatchesList, added click on name to go to full profile in ChatApplicationActivity.

--- a/app/src/main/res/layout/activity_full_profile.xml
+++ b/app/src/main/res/layout/activity_full_profile.xml
@@ -37,8 +37,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Login Man"
-                android:textSize="24dp"/>
+                android:text="Match Name"
+                android:textSize="24dp"
+                android:id="@+id/fullProfileMatchName" />
 
             <ListView
                 android:layout_width="wrap_content"
