--- a/app/src/main/res/layout/activity_chat_application.xml
+++ b/app/src/main/res/layout/activity_chat_application.xml
@@ -7,7 +7,9 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:onClick="chatBannerClickHandler"
+        android:nestedScrollingEnabled="false">
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
