--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
                 android:layout_height="175dp"
                 android:id="@+id/imageView"
                 android:layout_gravity="center_horizontal|top"
-                android:src="@drawable/test"
+                android:src="@drawable/sample_picture"
                 android:layout_row="0"
                 android:layout_column="1"
                 android:layout_above="@+id/button"
@@ -59,6 +59,15 @@
                 android:layout_alignRight="@+id/imageView"
                 android:layout_alignEnd="@+id/imageView"
                 android:onClick="yesMatchClickHandler" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Match Name"
+                android:id="@+id/matchName"
+                android:layout_above="@+id/button"
+                android:layout_centerHorizontal="true" />
 
         </RelativeLayout>
 
