--- a/app/src/main/res/layout/simple_match.xml
+++ b/app/src/main/res/layout/simple_match.xml
@@ -19,10 +19,11 @@
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/imageView4"
-                android:background="@drawable/sample_picture" />
+                android:background="@drawable/sample_picture"
+                android:visibility="invisible" />
 
             <TextView
-                android:id="@+id/matchName"
+                android:id="@+id/match_list_name"
                 android:paddingRight="12dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
